# beam-rider-

./: .gitignore  AGENTS.md  README.md  beamrider-brief.md  beamrider-v2-ext.md  beamrider-v2.md
beamrider-backend/: .env.example  Cargo.toml  README.md
beamrider-backend/migrations/: 0001_initial.sql  0002_signal_sales.sql  0003_rebalance_events.sql  0004_x402_sessions.sql  0005_stacks_sales.sql  0006_minipay_payments.sql
beamrider-backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
beamrider-backend/src/agent/: mod.rs  orchestrator.rs  prompts.rs
beamrider-backend/src/chains/: arbitrum.rs  base.rs  cctp.rs  celo.rs  mod.rs  stacks.rs
beamrider-backend/src/crypto/: mod.rs  signer.rs
beamrider-backend/src/domain/: attestation.rs  mod.rs  payment.rs  signal.rs  stacks.rs  strategy.rs
beamrider-backend/src/dto/: mod.rs  sessions.rs  signal_request.rs  signal_response.rs  x402.rs
beamrider-backend/src/handlers/: compute.rs  health.rs  mod.rs  sessions.rs  signals.rs  status.rs  webhooks.rs
beamrider-backend/src/middleware/: mod.rs  ratelimit.rs  trace.rs  x402.rs
beamrider-backend/src/repositories/: event_repo.rs  minipay_repo.rs  mod.rs  sale_repo.rs  session_repo.rs  signal_repo.rs  stacks_sale_repo.rs  strategy_repo.rs
beamrider-backend/src/services/: celo_payment.rs  mod.rs  pricing_service.rs  rebalance_service.rs  session_service.rs  signal_service.rs  stacks_payment.rs  strategy_service.rs
beamrider-backend/tests/: integration_cctp_hook.rs  integration_sessions.rs  integration_signal.rs  integration_x402.rs
(+40 files in other folders)
